syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "proxy_message.proto";
import "generic_message.proto";

message ProxyListRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ProxyListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Proxy proxy = 3;
}

message ProxyNameRequest {
    string device_id = 1;
    string name = 2;
}

message ProxyLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message ProxyCloneRequest {
    string id = 1;
    string device_id = 2;
}

message ProxyPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message ProxyPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Proxy proxy = 3;
}

service ProxyService {
    rpc Create(pb.Proxy) returns (pb.Proxy) {}
    rpc Update(pb.Proxy) returns (pb.Proxy) {}
    rpc View(pb.Id) returns (pb.Proxy) {}
    rpc Name(ProxyNameRequest) returns (pb.Proxy) {}
    rpc NameFull(pb.Name) returns (pb.Proxy) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ProxyListRequest) returns (ProxyListResponse) {}
    rpc Link(ProxyLinkRequest) returns (pb.MyBool) {}
    rpc Clone(ProxyCloneRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Proxy) {}
    rpc Pull(ProxyPullRequest) returns (ProxyPullResponse) {}
    rpc Sync(pb.Proxy) returns (pb.MyBool) {}
}
